--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
